--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <html>
   <head>
+    <meta charset="UTF-8">
     <title>Supreme Opposites</title>
     <link rel="stylesheet" href="main.css">
   </head>
