--- a/index.html
+++ b/index.html
@@ -27,8 +27,11 @@
 <div class="row">
 		<div class="col s12 m6">
 			<div class="card">
-				<div class="card-image waves-effect waves-block waves-light"><img class="https://s-media-cache-ak0.pinimg.com/originals/99/d6/04/99d604c95210d831da61e049a1f7fc79.jpg">
+				<div class="card-image waves-effect waves-block waves-light">
 				</div>
+				 <img class="https://s-media-cache-ak0.pinimg.com/originals/99/d6/04/99d604c95210d831da61e049a1f7fc79.jpg">
+				
+				
 
 
 				<div class="card-reveal">
@@ -39,3 +42,4 @@
 			</div>
 		</div>
 	</div>
+<img src="https://s-media-cache-ak0.pinimg.com/originals/99/d6/04/99d604c95210d831da61e049a1f7fc79.jpg">
